--- a/index.html
+++ b/index.html
@@ -5,26 +5,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minesweeper</title>
+  <title>Mine Sweeper</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body onload="initGame()">
 
   <header>
-    <h1 class="title">Minesweeper</h1>
+    <div class="timer">
+      00:00:000
+    </div>
+    <div class="lives">
+    </div>
+    <div class="points">
+      points
+    </div>
+
+    <h1 class="title">Mine Swe<span>😃</span>per</h1>
   </header>
 
-  <div>
-    <tbody></tbody>
+
+  <div class="buttons">
+    <button class="beginner" onclick="chooseLevel(this)">Beginner</button>
+    <button class="medium" onclick="chooseLevel(this)">Medium</button>
+    <button class="expert" onclick="chooseLevel(this)">Expert</button>
   </div>
 
+  <table class="board">
+    <tbody></tbody>
+  </table>
 
-  <!-- <footer>
-  Coffee Rights Bnaya Kahalani
-</footer> -->
+  <footer>
+    &copy Bnaya Kahalani
+  </footer>
 
-  <!-- <script src="js/utils.js"></script> -->
+  <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
 </body>
 
