--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     </div>
     <div class="lives">
     </div>
-    <div class="points">
-      points
+    <div class="flags">
+      🏴 
     </div>
+    <!-- <div class="record"></div> -->
 
-    <h1 class="title">Mine Swe<span>😃</span>per</h1>
+
+    <h1 class="title">Mine Swe<span onclick="initGame()">😃</span>per</h1>
   </header>
 
 
